added working configuration for selenoid (with docker compose) + include opera